- many fixes to comment window (Olivier Sannier)
- comment window is now (optionally) editable (Olivier Sannier)
- fixed preferences dialog if translation memory is not used (Olivier Sannier)
- added Mongolian translation (Mendbayar Bayar, Khurelbaatar Lkhagvasuren)
- added printf() tokens validation (Frederic Giudicelli)
  (requires wxWindows >= 2.5.1 in Unicode build)


Version 1.2.4
-------------

- added optional comment window to the bottom of main screen
  (based on patch by Olivier Sannier, still not fully functional)
- added "Automatically translate using TM" operation to the Catalog menu
- [Win32] upgraded bundled gettext to 0.12.1
- fixed .po files parser to read files created by xgettext -i
- added ability to customize fonts
- [Win32] added support for Delphi via dxgettext (http://dybdahl.dk/dxgettext/)
- translation memory wizard fixes for multiple languages case
- comments and msgid strings are stored using catalog's charset and are
  not limited to US-ASCII anymore (based on patch by Stefan Kowski)


Version 1.2.3
-------------

- fixed compilation with Berkeley DB 4.1.25
- fixed disappearing catalog status information
- fixed bug in redrawing overview list on startup
- added more translations:
     Serbian (Bojan Suzic)
     Portuguese (Lazarus Long)
     Hungarian (Szilard Vizi)
     Lithuanian (Mantas Kriauciunas, Liudas Dmitrijevas, Kestutis Snieska,
                 Ramunas Lukasevicius)
     Farsi (Abbas Izad)
     Afrikaans (Petri Jooste)
     Slovenian (Luka Marinko)


Version 1.2.2
-------------

- poEdit now correctly differentiates between Traditional and Simplified
  Chinese
- optimizations for better handling of catalogs with very large entries
- [Mac] compilation fixes for buggy gcc 3.1 snapshot used by MacOS X
- added country metadata into catalog settings dialog
- [Win32] it is now possible to change UI language directly in poEdit
- added catalog updating from POT files
- more intuitive UI for translation memory creation