@@ -91,6 +91,18 @@
                   <border>5d</border>
                   <flag>wxEXPAND|wxRIGHT|wxBOTTOM</flag>
                 </object>
+                <object class="sizeritem">
+                  <object class="wxStaticText">
+                    <label>Source code charset:</label>
+                  </object>
+                  <flag>wxLEFT|wxRIGHT|wxBOTTOM|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+                  <border>5d</border>
+                </object>
+                <object class="sizeritem">
+                  <object class="wxComboBox" name="source_code_charset"/>
+                  <border>5d</border>
+                  <flag>wxEXPAND|wxRIGHT|wxBOTTOM</flag>
+                </object>
               </object>
             </object>
             <label>Project info</label>
