@@ -43,7 +43,7 @@ class SettingsDialog : public wxDialog
             
     private:
         wxTextCtrl *m_team, *m_teamEmail, *m_project;            
-        wxComboBox *m_charset, *m_language, *m_country;
+        wxComboBox *m_charset, *m_language, *m_country, *m_sourceCodeCharset;
         wxTextCtrl *m_basePath;
         wxEditableListBox *m_paths, *m_keywords;
 };
