@@ -12,6 +12,8 @@ Version 1.2.5
 - added Mongolian translation (Mendbayar Bayar, Khurelbaatar Lkhagvasuren)
 - added printf() tokens validation (Frederic Giudicelli)
   (requires wxWindows >= 2.5.1 in Unicode build)
+- added ability to specify source code charset other than US-ASCII
+  (based on patch by Stefan Kowski)
 
 
 Version 1.2.4
